<resources>
    <string name="app_name">MyTweet</string>
    <string name="welcomeMessage">Welcome to MyTweet</string>
    <string name="launchMessage">See what\'s happening in the great WIT world right now</string>
    <string name="signupButton">Sign Up</string>
    <string name="loginButton">Log In</string>
    <string name="logout">Logout</string>
    <string name="signupFirstName">First Name</string>
    <string name="signupLastName">Last Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="registerButton">Sign Up</string>
    <string name="loginPrompt1">Please enter your email and password</string>
    <string name="loginPromot2">You must be registered</string>
    <string name="addTweet">Tweet</string>
    <string name="newTweetHint">What\'s on your mind?</string>
    <string name="contactButton">Select Contact</string>
    <string name="emailButton">Email Tweet</string>
    <string name="tweetSubstring">20 character substring&#8230;</string>
    <string name="tweetDate">Date of tweet</string>
    <string name="deleteTweetMulti">Delete Tweets</string>
    <string name="title_activity_home1">Home1</string>
    <string name="menuTweet">Add New Tweet</string>
    <string name="menuSettings">Settings</string>
    <string name="menuClear">Clear</string>
    <string name="latestTweetHeader">My Latest Tweet</string>
    <string name="settingsEmail">Email</string>
    <string name="defaultEmail">default</string>
    <string name="settingsEmailSub">Change your log in email</string>
    <string name="settingsPassword">Password</string>
    <string name="defaultPassword">default</string>
    <string name="settingsPasswordSub">Change your log in password</string>

    <string name="title_activity_splash2">Splash2</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_new_home">new_home</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
